[package]
name = "tegratop"
version = "0.2.1"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0"
edition = "2024"
description = "TUI for monitoring Nvidia jetson boards"
readme = "Readme.md"
homepage = "https://github.com/pythops/tegratop"
repository = "https://github.com/pythops/tegratop"

[dependencies]
ratatui = "0.29"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
regex = "1"
libc = "0.2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
